--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-### Django ###
 *.log
 *.pot
 *.pyc
@@ -6,5 +5,6 @@ __pycache__/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-media
+/media
 venv
+/static
